--- a/client/package.json
+++ b/client/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mind-mashup-client",
+  "name": "ieee-game-round1",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,23 +9,22 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "framer-motion": "^11.18.2",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
+    "express": "^5.1.0",
+    "framer-motion": "^11.2.12",
     "mongoose": "^8.17.2",
     "nanoid": "^5.1.5",
-    "next": "^14.2.3",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "next": "14.2.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "swr": "^2.3.6"
+    "swr": "^2.2.5"
   },
   "devDependencies": {
-    "@types/node": "^20.19.11",
-    "@types/react": "^18.3.23",
-    "@types/react-dom": "^18.3.7",
-    "eslint": "^8.57.1",
-    "eslint-config-next": "^14.2.3",
-    "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.17",
-    "typescript": "^5.9.2"
+    "@types/node": "24.3.0",
+    "eslint": "^8",
+    "eslint-config-next": "14.2.3"
   }
 }
