--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -22,6 +22,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/api/groups/route.ts", "src/app/layout.jsx", "src/app/page.jsx", "src/app/leaderboard/page.jsx", "src/app/games/page.jsx", "src/components/Timer.jsx", "src/modals/Group.js", "src/modals/Participant.js", "src/app/components/Lobby.jsx"],
   "exclude": ["node_modules"]
 }
